# origin-policy

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
chrome-extension/: README.md  background.js  content.js  detectors.generated.js  local_rules.yaml  manifest.json  popup.css  popup.html  popup.js
chrome-extension/scripts/: build_detectors.js
chrome-extension/styles/: banner.css
chrome-extension/tests/: test_detection.js
dashboard/: README.md  requirements.txt  seed.sql  violation_dashboard.py
docs/: question_router.md
eval/violations/: r1_question_no_category.yaml  r3_phase_id_in_body.yaml  r3_uuid_in_body.yaml  r4_emoji_only_completion.yaml  r4_no_evidence.yaml  r5_freeform_instruction.yaml
migrations/: 20260426_policy_violations.sql  20260426_policy_violations_rls_tighten.sql
origin_policy/: __init__.py  check_management_output.py  classifier.py  policy_gate.py
rules/: human_judgment_categories.yaml  tier0_detectors.yaml
schemas/: report_package.schema.json  task_package.schema.json
scripts/: check_management_output.py  classifier.py  policy_gate.py  question_router.py
scripts/macos_service/: README.md  install.sh  linux_fallback.sh  uninstall.sh
scripts/macos_service/PolicyGateCheck.workflow/Contents/: Info.plist  document.wflow
tests/: test_check_management_output.py  test_policy_gate.py  test_question_router.py
